--- a/configuration.yaml
+++ b/configuration.yaml
@@ -13,6 +13,11 @@ frontend:
   themes: !include themes.yaml
   javascript_version: latest
 
+lutron_caseta:
+  host: 192.168.1.19
+  keyfile: /ssl/lutron/caseta.key
+  certfile: /ssl/lutron/caseta.crt
+  ca_certs: /ssl/lutron/caseta-bridge.crt
 
 august:
   login_method: phone
