--- a/sensors.yaml
+++ b/sensors.yaml
@@ -211,3 +211,117 @@
     front_hall_light_brightness:
       friendly_name: "Front Hall Brightness"
       value_template: "{{ state_attr('light.front_foyer_main_lights',	'brightness') }}"
+- platform: mqtt
+  name: "Washer State"
+  state_topic: "hass/state/washer"
+  icon: mdi:washing-machine
+- platform: mqtt
+  name: "Washer Door State"
+  state_topic: "tasker/notification/sensor/washer"
+- platform: mqtt
+  name: "Dryer State"
+  state_topic: "hass/state/dryer"
+  icon: mdi:tumble-dryer
+- platform: mqtt
+  name: "Dryer Vibration"
+  state_topic: "tasker/notification/sensor/dryer"
+  force_update: 'true' 
+- platform: mqtt
+  name: Dryer Start Stop
+  state_topic: "gBridge/u4099/dryer/startstop"
+- platform: mqtt
+  name: "Washer Power"
+  state_topic: "tele/Washer/SENSOR"
+  value_template: "{{value_json['ENERGY']['Power'] }}"
+  qos: 2
+  unit_of_measurement: "W"
+  icon: mdi:flash-circle
+  availability_topic: "tele/Washer/LWT"
+  payload_available: "Online"
+  payload_not_available: "Offline"
+- platform: mqtt
+  name: "Washer Voltage"
+  state_topic: "tele/Washer/SENSOR"
+  value_template: "{{value_json['ENERGY']['Voltage'] }}"
+  qos: 2
+  unit_of_measurement: "V"
+  icon: mdi:flash-circle
+  availability_topic: "tele/Washer/LWT"
+  payload_available: "Online"
+  payload_not_available: "Offline" 
+- platform: mqtt
+  name: "Washer Current"
+  state_topic: "tele/Washer/SENSOR"
+  value_template: "{{value_json['ENERGY']['Current'] }}"
+  qos: 2
+  unit_of_measurement: "A"
+  icon: mdi:flash-circle
+  availability_topic: "tele/Washer/LWT"
+  payload_available: "Online"
+  payload_not_available: "Offline"   
+- platform: mqtt
+  name: "Washer Signal"
+  state_topic: "tele/Washer/STATE"
+  value_template: "{{value_json['Wifi']['RSSI'] }}"
+  qos: 2
+  unit_of_measurement: "%"
+  availability_topic: "tele/Washer/LWT"
+  payload_available: "Online"
+  payload_not_available: "Offline" 
+- platform: mqtt
+  name: "Washer Energy Today"
+  state_topic: "tele/Washer/SENSOR"
+  value_template: "{{value_json['ENERGY']['Today'] }}"
+  qos: 2
+  unit_of_measurement : "kWh"
+  availability_topic: "tele/Washer/LWT"
+  payload_available: "Online"
+  payload_not_available: "Offline"
+- platform: mqtt
+  name: "Washer Energy Yesterday"
+  state_topic: "tele/Washer/SENSOR"
+  value_template: "{{value_json['ENERGY']['Yesterday'] }}"
+  qos: 2
+  unit_of_measurement : "kWh"
+  availability_topic: "tele/Washer/LWT"
+  payload_available: "Online"
+  payload_not_available: "Offline"
+- platform: mqtt
+  name: "Washer Energy Total"
+  state_topic: "tele/Washer/SENSOR"
+  value_template: "{{value_json['ENERGY']['Total'] }}"
+  qos: 2
+  unit_of_measurement : "kWh"
+  availability_topic: "tele/Washer/LWT"
+  payload_available: "Online"
+  payload_not_available: "Offline"
+- platform: mqtt
+  name: "Plug 1 Energy Today"
+  state_topic: "tele/sonoff-plug-1/SENSOR"
+  value_template: "{{value_json['ENERGY']['Today'] }}"
+  qos: 2
+  unit_of_measurement : "kWh"
+  availability_topic: "tele/sonoff-plug-1/LWT"
+  payload_available: "Online"
+  payload_not_available: "Offline"
+- platform: mqtt
+  name: "Plug 1 Energy Yesterday"
+  state_topic: "tele/sonoff-plug-1/SENSOR"
+  value_template: "{{value_json['ENERGY']['Yesterday'] }}"
+  qos: 2
+  unit_of_measurement : "kWh"
+  availability_topic: "tele/sonoff-plug-1/LWT"
+  payload_available: "Online"
+  payload_not_available: "Offline"
+- platform: mqtt
+  name: "Plug 1 Energy Total"
+  state_topic: "tele/sonoff-plug-1/SENSOR"
+  value_template: "{{value_json['ENERGY']['Total'] }}"
+  qos: 2
+  unit_of_measurement : "kWh"
+  availability_topic: "tele/sonoff-plug-1/LWT"
+  payload_available: "Online"
+  payload_not_available: "Offline"
+- platform: mqtt
+  name: "Plug 1 Power State"
+  state_topic: "stat/sonoff-plug-1/POWER"
