--- a/configuration.yaml
+++ b/configuration.yaml
@@ -45,7 +45,7 @@ life360:
   error_threshold: 3
 
 ################
-# Media
+# Notifications
 ################
 
 # Text to speech
@@ -55,6 +55,16 @@ tts:
     cache: true
     cache_dir: /tmp/tts
     time_memory: 300
+
+telegram_bot:
+  - platform: polling
+    api_key: !secret telegram_api
+    allowed_chat_ids:
+      - !secret sarah_chat
+
+################
+# Media
+################
 
 media_player:
   - platform: vizio
