--- a/configuration.yaml
+++ b/configuration.yaml
@@ -16,6 +16,10 @@ frontend:
   themes: !include themes.yaml
   javascript_version: latest
 
+weather:
+  - platform: darksky
+    api_key: !secret darksky_api
+
 lutron_caseta:
   host: 192.168.1.19
   keyfile: /ssl/lutron/caseta.key
