--- a/automation/automation-presence.yaml
+++ b/automation/automation-presence.yaml
@@ -125,51 +125,51 @@
             input_select.scott_status_dropdown
         {% endif %}
       option: Extended Away
-# - alias: Turn off automations when both people are Extended Away
-#   trigger:
-#   - platform: state
-#     entity_id: input_select.sarah_status_dropdown
-#     to: Extended Away
-#   - platform: state
-#     entity_id: input_select.scott_status_dropdown
-#     to: Extended Away
-#   condition:
-#     condition: and
-#     conditions:
-#       - condition: state
-#         entity_id: input_select.sarah_status_dropdown
-#         state: Extended Away
-#       - condition: state
-#         entity_id: input_select.scott_status_dropdown
-#         state: Extended Away
-#   action:
-#     - service: automation.turn_off
-#       entity_id: automation.wake_up_light_bedroom
-#     - service: automation.turn_off
-#       entity_id: automation.turn_on_bedroom_lights_before_bed
-# - alias: Turn on automations when at least one person returns
-#   trigger:
-#   - platform: state
-#     entity_id: input_select.sarah_status_dropdown
-#     from: Extended Away
-#     to: Just Arrived
-#   - platform: state
-#     entity_id: input_select.sarah_status_dropdown
-#     from: Extended Away
-#     to: Home
-#   - platform: state
-#     entity_id: input_select.scott_status_dropdown
-#     from: Extended Away
-#     to: Just Arrived
-#   - platform: state
-#     entity_id: input_select.scott_status_dropdown
-#     from: Extended Away
-#     to: Home
-#   action:
-#     - service: automation.turn_on
-#       entity_id: automation.wake_up_light_bedroom
-#     - service: automation.turn_on
-#       entity_id: automation.turn_on_bedroom_lights_before_bed
+- alias: Turn off automations when both people are Extended Away
+  trigger:
+  - platform: state
+    entity_id: input_select.sarah_status_dropdown
+    to: Extended Away
+  - platform: state
+    entity_id: input_select.scott_status_dropdown
+    to: Extended Away
+  condition:
+    condition: and
+    conditions:
+      - condition: state
+        entity_id: input_select.sarah_status_dropdown
+        state: Extended Away
+      - condition: state
+        entity_id: input_select.scott_status_dropdown
+        state: Extended Away
+  action:
+    - service: automation.turn_off
+      entity_id: automation.wake_up_light_bedroom
+    - service: automation.turn_off
+      entity_id: automation.turn_on_bedroom_lights_before_bed
+- alias: Turn on automations when at least one person returns
+  trigger:
+  - platform: state
+    entity_id: input_select.sarah_status_dropdown
+    from: Extended Away
+    to: Just Arrived
+  - platform: state
+    entity_id: input_select.sarah_status_dropdown
+    from: Extended Away
+    to: Home
+  - platform: state
+    entity_id: input_select.scott_status_dropdown
+    from: Extended Away
+    to: Just Arrived
+  - platform: state
+    entity_id: input_select.scott_status_dropdown
+    from: Extended Away
+    to: Home
+  action:
+    - service: automation.turn_on
+      entity_id: automation.wake_up_light_bedroom
+    - service: automation.turn_on
+      entity_id: automation.turn_on_bedroom_lights_before_bed
 
 
   
