--- a/sensors.yaml
+++ b/sensors.yaml
@@ -8,57 +8,6 @@
     scott_status:
       value_template: '{{ states.input_select.scott_status_dropdown.state }}'
       friendly_name: 'Scott'
-- platform: template
-  sensors:
-    wakeup_alarm_time:
-      friendly_name: 'Alarm time'
-      value_template: '{% if states.input_number.wakeup_hour.state|length == 3 %}0{% endif %}{{ states.input_number.wakeup_hour.state | int }}:{% if states.input_number.wakeup_minutes.state|length == 3 %}0{% endif %}{{ states.input_number.wakeup_minutes.state | int }}'
-- platform: template
-  sensors:
-    wakeup_start_time_lights:
-      friendly_name: 'Fade-in start time'
-      value_template: >
-        {% if states.sensor.wakeup_alarm_time and states.input_number.wakeup_duration %}
-        {% set alarmtime = states.sensor.wakeup_alarm_time.state %}
-        {% set alarm_hour = alarmtime.split(":")[0] | int %}
-        {% set alarm_min = alarmtime.split(":")[1] | int %}
-        {% set light_dur = states.input_number.wakeup_duration.state | int %}
-        {% set alarm_min_light = alarm_min - light_dur %}
-        {% if alarm_min_light  < 0 %}
-        {% set alarm_min_light = alarm_min_light + 60 %}
-        {% set alarm_hour_light = alarm_hour - 1 %}
-        {% if alarm_hour_light < 0 %}{% set alarm_hour_light = 23 %}{% endif %}
-        {% if alarm_hour_light < 10 %}0{% endif %}{{ alarm_hour_light}}:{% if alarm_min_light < 10 %}0{% endif %}{{ alarm_min_light }}
-        {% else %}
-        {% if alarm_hour < 10 %}0{% endif %}{{ alarm_hour }}:{% if alarm_min_light < 10 %}0{% endif %}{{ alarm_min_light }}
-        {% endif %}
-        {% endif %}
-- platform: template
-  sensors:
-    wakeup_fadein_duration:
-      friendly_name: 'Fade-in duration'
-      value_template: '{{ states.input_number.wakeup_duration.state | int }}'
-      unit_of_measurement: 'min'
-- platform: template
-  sensors:
-    wakeup_lights_off_time:
-      friendly_name: 'Morning lights off time'
-      value_template: >
-        {% if states.sensor.wakeup_alarm_time and states.input_number.wakeup_duration %}
-        {% set alarmtime = states.sensor.wakeup_alarm_time.state %}
-        {% set alarm_hour = alarmtime.split(":")[0] | int %}
-        {% set alarm_min = alarmtime.split(":")[1] | int %}
-        {% set light_dur = 60 | int %}
-        {% set alarm_min_light = alarm_min + light_dur %}
-        {% if alarm_min_light  > 60 %}
-        {% set alarm_min_light = alarm_min_light - 60 %}
-        {% set alarm_hour_light = alarm_hour + 1 %}
-        {% if alarm_hour_light < 0 %}{% set alarm_hour_light = 23 %}{% endif %}
-        {% if alarm_hour_light < 10 %}0{% endif %}{{ alarm_hour_light}}:{% if alarm_min_light < 10 %}0{% endif %}{{ alarm_min_light }}
-        {% else %}
-        {% if alarm_hour < 10 %}0{% endif %}{{ alarm_hour }}:{% if alarm_min_light < 10 %}0{% endif %}{{ alarm_min_light }}
-        {% endif %}
-        {% endif %}
 - platform: time_date
   display_options:
     - 'time'
@@ -116,6 +65,7 @@
     wakeup_lights_off_time:
       friendly_name: 'Morning lights off time'
       value_template: >
+        {% if states.sensor.wakeup_alarm_time is defined %}
         {% if states.sensor.wakeup_alarm_time and states.input_number.wakeup_duration %}
         {% set alarmtime = states.sensor.wakeup_alarm_time.state %}
         {% set alarm_hour = alarmtime.split(":")[0] | int %}
@@ -129,6 +79,7 @@
         {% if alarm_hour_light < 10 %}0{% endif %}{{ alarm_hour_light}}:{% if alarm_min_light < 10 %}0{% endif %}{{ alarm_min_light }}
         {% else %}
         {% if alarm_hour < 10 %}0{% endif %}{{ alarm_hour }}:{% if alarm_min_light < 10 %}0{% endif %}{{ alarm_min_light }}
+        {% endif %}
         {% endif %}
         {% endif %}
 - platform: time_date
