--- a/configuration.yaml
+++ b/configuration.yaml
@@ -90,7 +90,7 @@ logger:
   default: warning
 
 recorder: 
-  db_url: mysql://hass:TTa44K69W%&IqAaHcmZ@core-mariadb/homeassistant?charset=utf8
+  db_url: !secret db_url
   purge_keep_days: 10
   exclude: 
     domains:
