--- a/configuration.yaml
+++ b/configuration.yaml
@@ -91,13 +91,13 @@ logger:
 
 recorder: 
   db_url: !secret db_url
-  purge_keep_days: 10
-  exclude: 
-    domains:
-      - media_player
-      - weather
-      - input_select
-      - input_number
+  purge_keep_days: 7
+  # exclude: 
+  #   domains:
+  #     - media_player
+  #     - weather
+  #     - input_select
+  #     - input_number
 
 history:
 
