--- a/configuration.yaml
+++ b/configuration.yaml
@@ -89,8 +89,18 @@ media_player:
 logger:
   default: warning
 
+logbook:
+  exclude:
+    entities:
+      - sensor.last_boot
+      - sensor.date
+      - sensor.date_time
+      - sensor.date_iso
+      - sensor.time_date
+    domains:
+      - sun
 recorder: 
-  db_url: !secret db_url
+  #db_url: !secret db_url
   purge_keep_days: 7
   # exclude: 
   #   domains:
