--- a/configuration.yaml
+++ b/configuration.yaml
@@ -109,6 +109,15 @@ recorder:
   #     - input_select
   #     - input_number
 
+influxdb:
+  host: a0d7b954-influxdb
+  port: 8086
+  database: homeassistant
+  username: homeassistant
+  password: !secret influxdb_password
+  max_retries: 3
+  default_measurement: state
+
 history:
 
 system_health:
