--- a/configuration.yaml
+++ b/configuration.yaml
@@ -99,9 +99,9 @@ logbook:
       - sensor.time_date
     domains:
       - sun
-recorder: 
+#recorder: 
   #db_url: !secret db_url
-  purge_keep_days: 7
+ # purge_keep_days: 7
   # exclude: 
   #   domains:
   #     - media_player
@@ -109,33 +109,16 @@ recorder:
   #     - input_select
   #     - input_number
 
-influxdb:
-  host: a0d7b954-influxdb
-  port: 8086
-  database: homeassistant
-  username: homeassistant
-  password: !secret influxdb_password
-  max_retries: 3
-  default_measurement: state
-  exclude:
-    entities:
-      - sensor.last_boot
-      - sensor.date
-      - sensor.date_time
-      - sensor.date_iso
-      - sensor.time_date
-    domains:
-      - input_select
-      - input_number
-      - weather
 
-history:
+#history:
+
+breaking_changes:
 
 system_health:
 
 speedtestdotnet: 
   scan_interval:
-    hours: 6
+    minutes: 10
   monitored_conditions:
     - ping
     - download
