--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -195,7 +195,7 @@ views:
             - type: custom:mini-media-player
               entity: media_player.vizio_smartcast
       - type: custom:mini-graph-card
-          name: Washing Machine Energy Consumption
+          #name: Washing Machine Energy Consumption
           entities:
           - entity: sensor.washer_energy_yesterday
           hours_to_show: 168
