--- a/automation/automation-dryer.yaml
+++ b/automation/automation-dryer.yaml
@@ -99,7 +99,7 @@
     - service: mqtt.publish
       data: 
         topic: gBridge/u4099/dryer/startstop/set
-        payload: 'start'
+        payload: 'stop'
         retain: 'true'
 - alias: Set dryer to done after running for an hour
   trigger: 
