--- a/configuration.yaml
+++ b/configuration.yaml
@@ -56,6 +56,31 @@ google:
   client_id: !secret google_cal_client_id
   client_secret: !secret google_cal_client_secret
 
+
+utility_meter:
+  printer_daily:
+    source:  sensor.plug_1_energy_today
+    cycle: daily
+    tariffs:
+      - peak
+      - midpeak
+      - onpeak
+  printer_weekly:
+    source:  sensor.plug_1_energy_today
+    cycle: weekly
+    tariffs:
+      - peak
+      - midpeak
+      - onpeak
+  printer_monthly:
+    source:  sensor.plug_1_energy_today
+    cycle: monthly
+    tariffs:
+      - peak
+      - midpeak
+      - onpeak
+
+
 ################
 # Notifications
 ################
@@ -118,7 +143,7 @@ system_health:
 
 speedtestdotnet: 
   scan_interval:
-    minutes: 10
+    hours: 12
   monitored_conditions:
     - ping
     - download
