--- a/automation/automation-utility.yaml
+++ b/automation/automation-utility.yaml
@@ -1,53 +1,53 @@
-- alias: Set off peak hydro hours
-  trigger:
-    - platform: time
-      at: '19:00:00'
-  action:
-    - service: utility_meter.select_tariff
-      entity_id: utility_meter.printer_daily
-      tariff: offpeak
-    - service: utility_meter.select_tariff
-      entity_id: utility_meter.printer_weekly
-      tariff: offpeak
-    - service: utility_meter.select_tariff
-      entity_id: utility_meter.printer_monthly
-      tariff: offpeak
-- alias: Set mid peak hydro hours
-  trigger:
-    - platform: time
-      at: '11:00:00'
-  condition:
-    condition: state
-    entity_id: 'binary_sensor.workday_sensor'
-    state: 'on'
-  action:
-    - service: utility_meter.select_tariff
-      entity_id: utility_meter.printer_daily
-      tariff: midpeak
-    - service: utility_meter.select_tariff
-      entity_id: utility_meter.printer_weekly
-      tariff: midpeak
-    - service: utility_meter.select_tariff
-      entity_id: utility_meter.printer_monthly
-      tariff: midpeak
-- alias: Set on peak hydro hours
-  trigger:
-    - platform: time
-      at: '07:00:00'
-    - platform: time
-      at: '17:00:00'
-  condition:
-    condition: state
-    entity_id: 'binary_sensor.workday_sensor'
-    state: 'on'
-  action:
-    - service: utility_meter.select_tariff
-      entity_id: utility_meter.printer_daily
-      tariff: onpeak
-    - service: utility_meter.select_tariff
-      entity_id: utility_meter.printer_weekly
-      tariff: onpeak
-    - service: utility_meter.select_tariff
-      entity_id: utility_meter.printer_monthly
-      tariff: onpeak
+# - alias: Set off peak hydro hours
+#   trigger:
+#     - platform: time
+#       at: '19:00:00'
+#   action:
+#     - service: utility_meter.select_tariff
+#       entity_id: utility_meter.printer_daily
+#       tariff: offpeak
+#     - service: utility_meter.select_tariff
+#       entity_id: utility_meter.printer_weekly
+#       tariff: offpeak
+#     - service: utility_meter.select_tariff
+#       entity_id: utility_meter.printer_monthly
+#       tariff: offpeak
+# - alias: Set mid peak hydro hours
+#   trigger:
+#     - platform: time
+#       at: '11:00:00'
+#   condition:
+#     condition: state
+#     entity_id: 'binary_sensor.workday_sensor'
+#     state: 'on'
+#   action:
+#     - service: utility_meter.select_tariff
+#       entity_id: utility_meter.printer_daily
+#       tariff: midpeak
+#     - service: utility_meter.select_tariff
+#       entity_id: utility_meter.printer_weekly
+#       tariff: midpeak
+#     - service: utility_meter.select_tariff
+#       entity_id: utility_meter.printer_monthly
+#       tariff: midpeak
+# - alias: Set on peak hydro hours
+#   trigger:
+#     - platform: time
+#       at: '07:00:00'
+#     - platform: time
+#       at: '17:00:00'
+#   condition:
+#     condition: state
+#     entity_id: 'binary_sensor.workday_sensor'
+#     state: 'on'
+#   action:
+#     - service: utility_meter.select_tariff
+#       entity_id: utility_meter.printer_daily
+#       tariff: onpeak
+#     - service: utility_meter.select_tariff
+#       entity_id: utility_meter.printer_weekly
+#       tariff: onpeak
+#     - service: utility_meter.select_tariff
+#       entity_id: utility_meter.printer_monthly
+#       tariff: onpeak
   
