--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -346,22 +346,22 @@ views:
             line_color: '#2980b9'
             align_icon: left
             align_header: left
-          - card: custom:mini-graph-card
-            name: Upload
-            entities:
-              -  sensor.speedtest_upload
-            line_width: 4
-            line_color: '#2980b9'
-            align_icon: left
-            align_header: left
-          - card: custom:mini-graph-card
-            name: Ping
-            entities:
-              -  sensor.speedtest_ping
-            line_width: 4
-            line_color: '#2980b9'
-            align_icon: left
-            align_header: left
+          # - card: custom:mini-graph-card
+          #   name: Upload
+          #   entities:
+          #     -  sensor.speedtest_upload
+          #   line_width: 4
+          #   line_color: '#2980b9'
+          #   align_icon: left
+          #   align_header: left
+          # - card: custom:mini-graph-card
+          #   name: Ping
+          #   entities:
+          #     -  sensor.speedtest_ping
+          #   line_width: 4
+          #   line_color: '#2980b9'
+          #   align_icon: left
+          #   align_header: left
         # - type: custom:vertical-style-card
         #   title: Pi-Hole
         #   cards:
