--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -307,7 +307,7 @@ views:
     badges: []
     cards:
       - type: custom:layout-card
-        layout: horizontal
+        layout: vertical
         cards:
         - type: custom:vertical-style-card
           cards:
