--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -342,6 +342,7 @@ views:
           line_color: '#2980b9'
           align_icon: left
           align_header: left
+          hours_to_show: 168
         - break
         - type: horizontal-stack
           cards:
@@ -353,6 +354,7 @@ views:
             line_color: '#2980b9'
             align_icon: left
             align_header: left
+            hours_to_show: 168
           - type: custom:mini-graph-card
             name: Upload
             entities:
@@ -361,6 +363,7 @@ views:
             line_color: '#2980b9'
             align_icon: left
             align_header: left
+            hours_to_show: 168
           - type: custom:mini-graph-card
             name: Ping
             entities:
@@ -369,6 +372,7 @@ views:
             line_color: '#2980b9'
             align_icon: left
             align_header: left
+            hours_to_show: 168
         # - type: custom:vertical-style-card
         #   title: Pi-Hole
         #   cards:
