--- a/configuration.yaml
+++ b/configuration.yaml
@@ -24,7 +24,7 @@ proximity:
       - device_tracker.life360_sarah_boyd
       - device_tracker.life360_scott_young
     tolerance: 100 #In meters
-    unit_of_measurement: mi #Used for travel distances
+    unit_of_measurement: km #Used for travel distances
 
 lovelace:
   mode: yaml
