--- a/sensors.yaml
+++ b/sensors.yaml
@@ -258,3 +258,5 @@
   # If errors occur, make sure configuration file is encoded as UTF-8
   unit_of_measurement: "°C"
   value_template: '{{ value | multiply(0.001) | round(1) }}'
+- platform: season
+  type: astronomical
