--- a/automation/automation-christmas.yaml
+++ b/automation/automation-christmas.yaml
@@ -1,4 +1,5 @@
 - alias: Turn on Christmas Tree when we get home
+  initial_state: 'off'
   trigger:
   - entity_id: sensor.sarah_status
     platform: state
@@ -17,6 +18,7 @@
         topic: cmnd/sonoff-plug-1/POWER
         payload: 'ON'
 - alias: Turn off Christmas Tree when we both leave
+  initial_state: 'off'
   trigger:
   - entity_id: sensor.sarah_status
     platform: state
