--- a/notify.yaml
+++ b/notify.yaml
@@ -1,3 +1,3 @@
-- name: telegram_sarah
-  platform: telegram
-  chat_id: !secret sarah_chat
+# - name: telegram_sarah
+#   platform: telegram
+#   chat_id: !secret sarah_chat
