--- a/configuration.yaml
+++ b/configuration.yaml
@@ -40,9 +40,9 @@ weather:
 
 lutron_caseta:
   host: 192.168.1.19
-  keyfile: /ssl/lutron/caseta.key
-  certfile: /ssl/lutron/caseta.crt
-  ca_certs: /ssl/lutron/caseta-bridge.crt
+  keyfile: ssl/lutron/caseta.key
+  certfile: ssl/lutron/caseta.crt
+  ca_certs: ssl/lutron/caseta-bridge.crt
 
 august:
   login_method: phone
